<resources>
    <string name="app_name">Mi agenda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_personas">Personas</string>
    <string name="aceptar">Aceptar</string>
    <string name="informacion_exitosa">La información se ha almacendado exitosamente</string>
    <string name="digite_documento">Digite documento</string>
    <string name="digite_nombre">Digite los nombre</string>
    <string name="ya_existe">La persona que está intentando registrar ya existe</string>
    <string name="digite_id_persona">Ingrese el id de la persona</string>
    <string name="digite_fecha">ingrese la fecha de la cita</string>
    <string name="digite_estado">estado</string>
    <string name="digite_observaciones">ingrese observaciones</string>
    <string name="guardar">guardar cita</string>
    <string name="consultar">Consultar Estado</string>
    <string name="menu_CitaRegistro">Citas</string>
    <string name="menu_citaConsulta">Consultar Cita</string>
    <string name="consulta_exitosa">Se ha actualizado el estado correctamente</string>
    <string name="error">No ha sido posible actualizar el estado</string>
</resources>