<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_persona"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_personas" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_citaRegistro"
            android:icon="@drawable/ic_baseline_insert_chart_24"
            android:title="@string/menu_CitaRegistro" />
        <item
            android:id="@+id/nav_citaConsulta"
            android:icon="@drawable/ic_baseline_youtube_searched_for_24"
            android:title="@string/menu_citaConsulta" />
    </group>
</menu>