<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="co.com.k4soft.miagenda.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_persona"
        android:name="co.com.k4soft.miagenda.ui.personas.PersonaFragment"
        android:label="@string/menu_personas"
        tools:layout="@layout/fragment_persona" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="co.com.k4soft.miagenda.ui.citas.CitaFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_citaRegistro"
        android:name="co.com.k4soft.miagenda.ui.citasRegistro.CitasRegistroFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_citaConsulta"
        android:name="co.com.k4soft.miagenda.ui.citasConsulta.CitasConsultaFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>